feat: add new staff
